# aawordsearch

./: .editorconfig  .gitignore  ChangeLog  README.md  aawordsearch.c  globals.h  meson.build  wordsearch.c
.github/workflows/: c-cpp.yml  codeql-analysis.yml
website/: README.md  index.html
website/cgi-bin/: aawordsearch.cgi  aawordsearch_de.cgi  aawordsearch_it.cgi
